crates/sql-orm-sqlserver/tests/snapshots/compiler_snapshots__compiled_count.snap
---
source: crates/sql-orm-sqlserver/tests/compiler_snapshots.rs
expression: render_snapshot(&compiled)
---
SQL: SELECT COUNT(*) AS [count] FROM [sales].[customers] WHERE ([sales].[customers].[active] = @P1)
Params:
1: Bool(true)
