crates/sql-orm-sqlserver/tests/snapshots/compiler_snapshots__compiled_delete.snap
---
source: crates/sql-orm-sqlserver/tests/compiler_snapshots.rs
expression: render_snapshot(&compiled)
---
SQL: DELETE FROM [sales].[customers] WHERE ([sales].[customers].[id] = @P1)
Params:
1: I64(7)
