crates/sql-orm-sqlserver/tests/snapshots/compiler_snapshots__compiled_grouped_aggregate_with_having_join_and_params.snap
---
source: crates/sql-orm-sqlserver/tests/compiler_snapshots.rs
expression: render_snapshot(&compiled)
---
SQL: SELECT [o].[customer_id] AS [customer_id], COUNT(*) AS [order_count], SUM([o].[total_cents]) AS [sum_cents], AVG([o].[total_cents]) AS [avg_cents], MIN([o].[total_cents]) AS [min_cents], MAX([o].[total_cents]) AS [max_cents] FROM [sales].[customers] AS [c] INNER JOIN [sales].[orders] AS [o] ON ([c].[id] = [o].[customer_id]) WHERE (([c].[active] = @P1) AND ([o].[total_cents] >= @P2)) GROUP BY [o].[customer_id] HAVING ((COUNT(*) > @P3) AND (SUM([o].[total_cents]) >= @P4)) ORDER BY SUM([o].[total_cents]) DESC OFFSET @P5 ROWS FETCH NEXT @P6 ROWS ONLY
Params:
1: Bool(true)
2: I64(1000)
3: I64(1)
4: I64(10000)
5: I64(25)
6: I64(25)
