crates/sql-orm-sqlserver/tests/snapshots/compiler_snapshots__compiled_select_with_join.snap
---
source: crates/sql-orm-sqlserver/tests/compiler_snapshots.rs
assertion_line: 266
expression: render_snapshot(&compiled)
---
SQL: SELECT [sales].[customers].[email] AS [email], [sales].[orders].[total_cents] AS [total_cents] FROM [sales].[customers] INNER JOIN [sales].[orders] ON ([sales].[customers].[id] = [sales].[orders].[customer_id]) WHERE ([sales].[orders].[total_cents] >= @P1) ORDER BY [sales].[orders].[total_cents] DESC OFFSET @P2 ROWS FETCH NEXT @P3 ROWS ONLY
Params:
1: I64(5000)
2: I64(10)
3: I64(10)
