crates/sql-orm-sqlserver/tests/snapshots/compiler_snapshots__compiled_update.snap
---
source: crates/sql-orm-sqlserver/tests/compiler_snapshots.rs
expression: render_snapshot(&compiled)
---
SQL: UPDATE [sales].[customers] SET [email] = @P1, [active] = @P2 OUTPUT INSERTED.* WHERE ([sales].[customers].[id] = @P3)
Params:
1: String("ana.maria@example.com")
2: Bool(false)
3: I64(7)
